# translation-direction-detection

./: LICENSE  README.md  pyproject.toml
experiments/: README.md  cached_model.py  datasets.py  requirements-exp.txt  utils.py
experiments/scripts/: accuracy_baseline.py  accuracy_wmt.py  full_model_table.py  full_stats_table.py  real_world_hypothesis_test.py  run_all_m2m100.py  run_all_nllb.py  run_all_small100.py  run_baseline.py  table_14_accuracy_baseline.py  table_15_indirect_stats.py  table_1_main_stats.py  table_2_baseline_comparison.py  table_3_accuracy_baseline.py  table_4_accuracy_nmt.py  table_4_accuracy_prenmt.py  table_5_accuracy_indirect_ht.py  table_6_examples.py  table_7_accuracy_doc_ht.py  table_8_accuracy_doc_nmt.py
experiments/supervised_baseline/scripts/: model.py  train.py  train_concat.py  train_siamese.py
experiments/tests/: test_cached_model.py  test_wmt_datasets.py
src/translation_direction_detection/: __init__.py  detector.py
tests/: test_detector.py  test_result.py
